syntax = "proto2";
package libp2p_pubsub;

enum Msg_type {
    Raw = 0;
    Ack = 1;
    Wit = 2;
}

message PbMessage{


    required Msg_type Msg_type = 1;
    required int64 source = 2;
    required int64 step = 3;
    repeated PbMessage history = 4;

}